--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-div {
-    border: 1px solid;
-}
 .header {
     background-color: #ecf2f8;
     height: 80px;
@@ -17,5 +14,8 @@ div {
 }
 
 #game {
-    //display: none;
+    display: none;
+}
+#reset_form {
+    display: none;
 }
